Add paid token project info
